frontend/test/should_pass/matchingexample.gm
node class N
{
	i:int = 42;
}
